--- a/webproj/app/templates/comment.html
+++ b/webproj/app/templates/comment.html
@@ -32,18 +32,17 @@
                             <br>
                         </div>
                         <div class="panel-footer text-right">
-                            <button type="button" class="btn btn-warning btn-xs" aria-label="Left Align" data-toggle="collapse" data-target="#edit{{ forloop.counter }}">
-                                <span class="glyphicon glyphicon-edit"></span> Change
-                            </button>
-                            <br>
                             {% if url == 'artist' %}
-                                <form action='/artist/{{ name }}' method="post" >
+                                <form action='{% url 'artist' artist=name %}' method="post">
                             {% else %}
-                                <form action='/album/{{ artist }}/{{ album }}' method="post" >
+                                <form action='{% url 'album' artist=artist album=album %}' method="post">
                             {% endif %}
                                     {% csrf_token %}
                                     <input type="hidden" name="form-type" value="delete-form" />
                                     <input type="hidden" name="commentID" value="{{ comment.2 }}">
+                                    <button type="button" class="btn btn-warning btn-xs" aria-label="Left Align" data-toggle="collapse" data-target="#edit{{ forloop.counter }}">
+                                        <span class="glyphicon glyphicon-edit"></span> Change
+                                    </button>
                                     <button type="submit" class="btn btn-danger btn-xs" aria-label="Left Align"
                                             onclick="return confirm('Are you sure you want to delete this comment?')">
                                         <span class="glyphicon glyphicon-remove"></span> Remove
@@ -62,9 +61,9 @@
                         </div>
                         <div class="panel-body" style="padding-left: 15px;">
                             {% if url == 'artist' %}
-                                <form action='/artist/{{ name }}' method="post" >
+                                <form action='{% url 'artist' artist=name %}' method="post" >
                             {% else %}
-                                <form action='/album/{{ artist }}/{{ album }}' method="post" >
+                                <form action='{% url 'album' artist=artist album=album %}' method="post" >
                             {% endif %}
                                     {% csrf_token %}
                                     <input type="hidden" name="form-type" value="edit-form" />
@@ -89,9 +88,9 @@
             </div>
             <div class="col-sm-9">
                 {% if url == 'artist' %}
-                    <form action='/artist/{{ name }}' method="post" >
+                    <form action='{% url 'artist' artist=name %}' method="post" >
                 {% else %}
-                    <form action='/album/{{ artist }}/{{ album }}' method="post" >
+                    <form action='{% url 'album' artist=artist album=album %}' method="post" >
                 {% endif %}
                         {% csrf_token %}
                         <input type="hidden" name="form-type" value="comment-form" />
