--- a/webproj/app/templates/toptracks.html
+++ b/webproj/app/templates/toptracks.html
@@ -1,34 +1,38 @@
 {% extends "layout.html" %}
 
 {% block content %}
-    <section>
+    <section style="padding-bottom: 40px;">
         <div class="container" style="padding-top: 40px;">
             <div class="row">
                 <ol class="breadcrumb">
                     <li>Top</li>
-                    <li class="active">Top Artists</li>
+                    <li class="active">Top Tracks</li>
                 </ol>
             </div>
         </div>
         <div class="container" style="padding-top: 10px;">
             <div class="row">
-                <h1 class="text-center">Top Artists</h1>
+                <h1 class="text-center">Top Tracks</h1>
             </div>
             <div class="row" style="padding-top: 20px;">
                 <div class="col-md-1"></div>
-                {% for artist in topArtists %}
+                {% for track in topTracks %}
                     {% if forloop.counter0|divisibleby:5 %}
                         <div class="row" style="padding-top: 20px;">
                             <div class="col-md-1"></div>
                     {% endif %}
                             <div class="col-sm-2 text-center">
-                                <a href="{% url 'artist' artist=artist.0 %}">
-                                    <img class="img-rounded" height="150" width="150" src="{{ artist.1 }}">
+                                <a href="{% url 'artist' artist=track.0 %}">
+                                    <img class="img-rounded" height="150" width="150" src="{{ track.2 }}">
                                 </a>
                                 <br><br>
-                                <h4 class="media-heading text-center">
-                                    <a href="{% url 'artist' artist=artist.0 %}" style="color:black">{{ artist.0 }}</a>
+                                <h4 class="media-heading text-center" style="color:black">
+                                    "{{ track.1 }}"
                                 </h4>
+                                <h5 class="media-heading text-center" style="color:black">
+                                    by
+                                    <a href="{% url 'artist' artist=track.0 %}" style="color:black">{{ track.0 }}</a>
+                                </h5>
                             </div>
                     {% if forloop.counter|divisibleby:5 %}
                             <br><br>
@@ -42,28 +46,28 @@
           <ul class="pagination">
               {% if page > 1 %}
                   <li>
-                    <a href="{% url 'topArtistsPage' page=page|add:"-1" %}" aria-label="Previous">
+                    <a href="{% url 'topTracksPage' page=page|add:"-1" %}" aria-label="Previous">
               {% elif page == 1 %}
                   <li class="disabled">
-                    <a href="{% url 'topArtists' %}" aria-label="Previous">
+                    <a href="{% url 'topTracks' %}" aria-label="Previous">
               {% else %}
                   <li>
-                    <a href="{% url 'topArtists' %}" aria-label="Previous">
+                    <a href="{% url 'topTracks' %}" aria-label="Previous">
               {% endif %}
                         <span aria-hidden="true">&laquo;</span>
                     </a>
             </li>
             {% if page == 1 %}
-                <li class="active"><a href="{% url 'topArtists' %}">{{ page }}</a></li>
+                <li class="active"><a href="{% url 'topTracks' %}">{{ page }}</a></li>
             {% else %}
-                <li class="active"><a href="{% url 'topArtistsPage' page=page %}">{{ page }}</a></li>
+                <li class="active"><a href="{% url 'topTracksPage' page=page %}">{{ page }}</a></li>
             {% endif %}
-            <li><a href="{% url 'topArtistsPage' page=page|add:1 %}">{{ page|add:1 }}</a></li>
-            <li><a href="{% url 'topArtistsPage' page=page|add:2 %}">{{ page|add:2 }}</a></li>
-            <li><a href="{% url 'topArtistsPage' page=page|add:3 %}">{{ page|add:3 }}</a></li>
-            <li><a href="{% url 'topArtistsPage' page=page|add:4 %}">{{ page|add:4 }}</a></li>
+            <li><a href="{% url 'topTracksPage' page=page|add:1 %}">{{ page|add:1 }}</a></li>
+            <li><a href="{% url 'topTracksPage' page=page|add:2 %}">{{ page|add:2 }}</a></li>
+            <li><a href="{% url 'topTracksPage' page=page|add:3 %}">{{ page|add:3 }}</a></li>
+            <li><a href="{% url 'topTracksPage' page=page|add:4 %}">{{ page|add:4 }}</a></li>
             <li>
-              <a href="{% url 'topArtistsPage' page=page|add:1 %}" aria-label="Next">
+              <a href="{% url 'topTracksPage' page=page|add:1 %}" aria-label="Next">
                 <span aria-hidden="true">&raquo;</span>
               </a>
             </li>
